--- a/chat/room/default.html
+++ b/chat/room/default.html
@@ -6,14 +6,15 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta http-equiv=“X-UA-Compatible” content=“IE=7” />
   <title>phpFreeChat - default theme and default parameters</title>
 
   <meta name="viewport" content="width=device-width" />
 
 
-  <script src="../client/lib/jquery-1.8.2.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../client/themes/default/jquery.phpfreechat.min.css" />
-  <script src="../client/jquery.phpfreechat.min.js" type="text/javascript"></script>
+  <script src="https://whistleblower.network/snitch/chat/client/lib/jquery-1.8.2.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://whistleblower.network/snitch/chat/client/themes/default/jquery.phpfreechat.min.css" />
+  <script src="https://whistleblower.network/snitch/chat/client/jquery.phpfreechat.min.js" type="text/javascript"></script>
 
 
   
